--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jackSparrow797/design-template#readme",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "css-loader": "^3.4.2",
@@ -27,16 +28,14 @@
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "popper.js": "^1.16.0",
-    "recaptcha-v3": "^1.7.2",
     "sass-loader": "^8.0.2",
     "slick-carousel": "^1.8.1",
     "webpack": "^4.41.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
-    "babel-core": "^6.26.3",
+    "@babel/preset-env": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
     "webpack-cli": "^3.3.10"
   }
 }
