--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "axios": "^0.19.1",
+    "blazy": "^1.8.2",
     "bootstrap": "^4.4.1",
     "css-loader": "^3.4.2",
     "jquery": "^3.4.1",
+    "jquery-lazy": "^1.7.10",
     "jquery-mask-plugin": "^1.14.16",
+    "lazyload": "^2.0.0-rc.2",
+    "lazyloadxt": "^1.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
